--- a/Gestione Ricevimenti/Gestione Ricevimenti.iOS/Gestione Ricevimenti.iOS.csproj
+++ b/Gestione Ricevimenti/Gestione Ricevimenti.iOS/Gestione Ricevimenti.iOS.csproj
@@ -150,11 +150,11 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\Gestione_Ricevimenti\Gestione_Ricevimenti.csproj">
-      <Project>{2513FA62-4A7F-4EF5-8FD1-5905BE4FF28D}</Project>
-      <Name>Gestione_Ricevimenti</Name>
+    <ProjectReference Include="..\Gestione Ricevimenti\Gestione Ricevimenti.csproj">
+      <Project>{46252ba4-6cea-43ea-858a-3106a47adebc}</Project>
+      <Name>Gestione Ricevimenti</Name>
     </ProjectReference>
   </ItemGroup>
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
