--- a/Gestione Ricevimenti/Gestione Ricevimenti.iOS/Gestione Ricevimenti.iOS.csproj
+++ b/Gestione Ricevimenti/Gestione Ricevimenti.iOS/Gestione Ricevimenti.iOS.csproj
@@ -148,6 +148,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3-beta2</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
   </ItemGroup>
   <ItemGroup>
