--- a/Gestione Ricevimenti/Gestione Ricevimenti.Android/Gestione Ricevimenti.Android.csproj
+++ b/Gestione Ricevimenti/Gestione Ricevimenti.Android/Gestione Ricevimenti.Android.csproj
@@ -157,5 +157,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\values\ic_launcher_logo3_background.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_exit_to_app_black_24dp.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_home_black_24dp.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_info_outline_black_24dp.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
