--- a/Gestione Ricevimenti/Gestione Ricevimenti.Android/Gestione Ricevimenti.Android.csproj
+++ b/Gestione Ricevimenti/Gestione Ricevimenti.Android/Gestione Ricevimenti.Android.csproj
@@ -166,5 +166,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\ic_info_outline_black_24dp.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\iu.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
