--- a/Gestione Ricevimenti/Gestione Ricevimenti/Gestione Ricevimenti.csproj
+++ b/Gestione Ricevimenti/Gestione Ricevimenti/Gestione Ricevimenti.csproj
@@ -21,6 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="InfoPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="ProfHomePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
