Correzioni + completamento StudentHomePage + bozza StudentBookSlotPage

--- a/Gestione Ricevimenti/Gestione Ricevimenti/Gestione Ricevimenti.csproj
+++ b/Gestione Ricevimenti/Gestione Ricevimenti/Gestione Ricevimenti.csproj
@@ -27,6 +27,9 @@
     <EmbeddedResource Update="ProfHomePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="StudentBookSlotPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="StudentHomePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
