Completamento StudentBookSlotPage + bozza StudentNewEventPage

--- a/Gestione Ricevimenti/Gestione Ricevimenti/Gestione Ricevimenti.csproj
+++ b/Gestione Ricevimenti/Gestione Ricevimenti/Gestione Ricevimenti.csproj
@@ -33,5 +33,8 @@
     <EmbeddedResource Update="StudentHomePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="StudentNewEventPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
