--- a/Gestione Ricevimenti/Gestione Ricevimenti/Gestione Ricevimenti.csproj
+++ b/Gestione Ricevimenti/Gestione Ricevimenti/Gestione Ricevimenti.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3-beta2" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
   </ItemGroup>
 
